# web-app-tmpl

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  start-dev.sh
.github/workflows/: build-all.yml  build-backend.yml  build-frontend.yml
backend/: Cargo.toml  README.md
backend/migrations/: 001_create_accounts_table.sql  002_create_notifications_table.sql  102_add_username_to_accounts.sql
backend/src/: auth.rs  dba.rs  handlers.rs  main.rs  models.rs
deploy/: .env.example  docker-compose.yml  nginx-entrypoint.sh  nginx-init.conf  nginx.conf
docker/: backend.Dockerfile  certbot-entrypoint.sh  docker-compose.yml  frontend.Dockerfile  nginx-init.conf
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/blog/: page.tsx
frontend/src/backend/: account-settings.ts  account.ts  auth.ts  config.ts  google-oauth.ts  index.ts  notifications.ts  status.ts  verify.ts
frontend/src/blog/: getting-started-with-nextjs.md  rust-backend-performance.md  scaling-web-applications.md  web-app-security-best-practices.md
frontend/src/components/: account-settings.tsx  blog-card.tsx  blog-content.tsx  blog-list.tsx  dashboard-sidebar.tsx  footer.tsx  google-signin-button.tsx  header.tsx  language-switcher.tsx  pricing-plans.tsx
frontend/src/contexts/: auth-context.tsx  i18n-context.tsx
frontend/src/lib/: blog.ts  google-oauth.ts  pricing-data.ts
(+17 files in other folders)
